--- a/vocab_demo.html
+++ b/vocab_demo.html
@@ -14,93 +14,23 @@
       --ok: #34d399;
       --border: #2a355f;
     }
-    body {
-      margin: 0;
-      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Noto Sans CJK SC", sans-serif;
-      background: linear-gradient(180deg, #070b16, #0d1530);
-      color: var(--text);
-      min-height: 100vh;
-      padding: 24px;
-    }
-    .wrap {
-      max-width: 900px;
-      margin: 0 auto;
-    }
-    h1 {
-      margin: 0 0 8px;
-      font-size: 28px;
-    }
-    .sub {
-      color: var(--muted);
-      margin-bottom: 20px;
-    }
-    .toolbar {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 10px;
-      margin-bottom: 18px;
-    }
-    button {
-      background: #1b2650;
-      color: var(--text);
-      border: 1px solid var(--border);
-      border-radius: 12px;
-      padding: 10px 14px;
-      cursor: pointer;
-      font-size: 14px;
-    }
+    body { margin: 0; font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "PingFang SC", "Noto Sans CJK SC", sans-serif; background: linear-gradient(180deg, #070b16, #0d1530); color: var(--text); min-height: 100vh; padding: 24px; }
+    .wrap { max-width: 900px; margin: 0 auto; }
+    h1 { margin: 0 0 8px; font-size: 28px; }
+    .sub { color: var(--muted); margin-bottom: 20px; }
+    .toolbar { display: flex; flex-wrap: wrap; gap: 10px; margin-bottom: 18px; }
+    button { background: #1b2650; color: var(--text); border: 1px solid var(--border); border-radius: 12px; padding: 10px 14px; cursor: pointer; font-size: 14px; }
     button:hover { border-color: var(--accent); }
     .primary { background: #1f3a8a; border-color: #2746a5; }
-    .cards {
-      display: grid;
-      grid-template-columns: repeat(auto-fill, minmax(280px, 1fr));
-      gap: 14px;
-    }
-    .card {
-      background: rgba(20, 27, 52, 0.9);
-      border: 1px solid var(--border);
-      border-radius: 14px;
-      padding: 14px;
-    }
-    .word {
-      font-size: 22px;
-      font-weight: 700;
-      margin-bottom: 4px;
-    }
-    .phonetic {
-      color: var(--muted);
-      font-size: 14px;
-      margin-bottom: 8px;
-    }
-    .meta {
-      font-size: 14px;
-      color: #cdd9ff;
-      margin: 6px 0;
-      line-height: 1.5;
-    }
+    .cards { display: grid; grid-template-columns: repeat(auto-fill, minmax(280px, 1fr)); gap: 14px; }
+    .card { background: rgba(20, 27, 52, 0.9); border: 1px solid var(--border); border-radius: 14px; padding: 14px; }
+    .word { font-size: 22px; font-weight: 700; margin-bottom: 4px; }
+    .phonetic { color: var(--muted); font-size: 14px; margin-bottom: 8px; }
+    .meta { font-size: 14px; color: #cdd9ff; margin: 6px 0; line-height: 1.5; }
     .tags { margin-top: 8px; }
-    .tag {
-      display: inline-block;
-      font-size: 12px;
-      color: #b8f3d8;
-      border: 1px solid #1f7a57;
-      padding: 2px 8px;
-      border-radius: 999px;
-      margin-right: 6px;
-      margin-top: 6px;
-    }
-    .audio-row {
-      display: flex;
-      gap: 8px;
-      margin-top: 10px;
-      flex-wrap: wrap;
-    }
-    .status {
-      margin: 12px 0 20px;
-      color: var(--ok);
-      font-size: 14px;
-      min-height: 20px;
-    }
+    .tag { display: inline-block; font-size: 12px; color: #b8f3d8; border: 1px solid #1f7a57; padding: 2px 8px; border-radius: 999px; margin-right: 6px; margin-top: 6px; }
+    .audio-row { display: flex; gap: 8px; margin-top: 10px; flex-wrap: wrap; }
+    .status { margin: 12px 0 20px; color: var(--ok); font-size: 14px; min-height: 20px; }
   </style>
 </head>
 <body>
@@ -115,42 +45,49 @@
     </div>
 
     <div id="status" class="status"></div>
-    <div id="cards" class="cards"></div>
+
+    <div id="cards" class="cards">
+      <article class="card" data-word="resilient">
+        <div class="word">resilient</div>
+        <div class="phonetic">/rɪˈzɪliənt/</div>
+        <div class="meta"><b>adj.</b> 有韧性的；恢复力强的</div>
+        <div class="meta">例句：She is resilient and recovers quickly from setbacks.</div>
+        <div class="tags"><span class="tag">等级 B2</span><span class="tag">新词</span></div>
+        <div class="audio-row">
+          <button class="speak-btn" data-accent="us" data-text="resilient">🔊 美音</button>
+          <button class="speak-btn" data-accent="uk" data-text="resilient">🔊 英音</button>
+        </div>
+      </article>
+
+      <article class="card" data-word="meticulous">
+        <div class="word">meticulous</div>
+        <div class="phonetic">/məˈtɪkjələs/</div>
+        <div class="meta"><b>adj.</b> 一丝不苟的；非常仔细的</div>
+        <div class="meta">例句：He keeps meticulous notes for every meeting.</div>
+        <div class="tags"><span class="tag">等级 C1</span><span class="tag">复习</span></div>
+        <div class="audio-row">
+          <button class="speak-btn" data-accent="us" data-text="meticulous">🔊 美音</button>
+          <button class="speak-btn" data-accent="uk" data-text="meticulous">🔊 英音</button>
+        </div>
+      </article>
+
+      <article class="card" data-word="pragmatic">
+        <div class="word">pragmatic</div>
+        <div class="phonetic">/præɡˈmætɪk/</div>
+        <div class="meta"><b>adj.</b> 务实的；讲求实际的</div>
+        <div class="meta">例句：We need a pragmatic solution, not a perfect one.</div>
+        <div class="tags"><span class="tag">等级 B2</span><span class="tag">高频</span></div>
+        <div class="audio-row">
+          <button class="speak-btn" data-accent="us" data-text="pragmatic">🔊 美音</button>
+          <button class="speak-btn" data-accent="uk" data-text="pragmatic">🔊 英音</button>
+        </div>
+      </article>
+    </div>
   </div>
 
   <script>
-    const words = [
-      {
-        text: "resilient",
-        phonetic: "/rɪˈzɪliənt/",
-        pos: "adj.",
-        meaning: "有韧性的；恢复力强的",
-        example: "She is resilient and recovers quickly from setbacks.",
-        level: "B2",
-        familiarity: "新词"
-      },
-      {
-        text: "meticulous",
-        phonetic: "/məˈtɪkjələs/",
-        pos: "adj.",
-        meaning: "一丝不苟的；非常仔细的",
-        example: "He keeps meticulous notes for every meeting.",
-        level: "C1",
-        familiarity: "复习"
-      },
-      {
-        text: "pragmatic",
-        phonetic: "/præɡˈmætɪk/",
-        pos: "adj.",
-        meaning: "务实的；讲求实际的",
-        example: "We need a pragmatic solution, not a perfect one.",
-        level: "B2",
-        familiarity: "高频"
-      }
-    ];
-
+    const words = ["resilient", "meticulous", "pragmatic"];
     const statusEl = document.getElementById("status");
-    const cardsEl = document.getElementById("cards");
 
     function speakWord(text, accent = "us") {
       window.speechSynthesis.cancel();
@@ -160,7 +97,7 @@
       u.lang = accent === "uk" ? "en-GB" : "en-US";
       statusEl.textContent = `正在播放：${text}（${accent === "uk" ? "英音" : "美音"}）`;
       u.onend = () => { statusEl.textContent = `播放完成：${text}`; };
-      u.onerror = () => { statusEl.textContent = `播放失败：${text}（请检查浏览器语音权限）`; };
+      u.onerror = () => { statusEl.textContent = `播放失败：${text}`; };
       window.speechSynthesis.speak(u);
     }
 
@@ -168,10 +105,10 @@
       window.speechSynthesis.cancel();
       for (const item of words) {
         await new Promise((resolve) => {
-          const u = new SpeechSynthesisUtterance(item.text);
+          const u = new SpeechSynthesisUtterance(item);
           u.rate = 0.92;
           u.lang = accent === "uk" ? "en-GB" : "en-US";
-          statusEl.textContent = `正在播放：${item.text}（${accent === "uk" ? "英音" : "美音"}）`;
+          statusEl.textContent = `正在播放：${item}（${accent === "uk" ? "英音" : "美音"}）`;
           u.onend = resolve;
           u.onerror = resolve;
           window.speechSynthesis.speak(u);
@@ -180,24 +117,9 @@
       statusEl.textContent = "全部播放完成 ✅";
     }
 
-    function render() {
-      cardsEl.innerHTML = words.map(w => `
-        <article class="card">
-          <div class="word">${w.text}</div>
-          <div class="phonetic">${w.phonetic}</div>
-          <div class="meta"><b>${w.pos}</b> ${w.meaning}</div>
-          <div class="meta">例句：${w.example}</div>
-          <div class="tags">
-            <span class="tag">等级 ${w.level}</span>
-            <span class="tag">${w.familiarity}</span>
-          </div>
-          <div class="audio-row">
-            <button onclick="speakWord('${w.text}', 'us')">🔊 美音</button>
-            <button onclick="speakWord('${w.text}', 'uk')">🔊 英音</button>
-          </div>
-        </article>
-      `).join("");
-    }
+    document.querySelectorAll('.speak-btn').forEach(btn => {
+      btn.addEventListener('click', () => speakWord(btn.dataset.text, btn.dataset.accent));
+    });
 
     document.getElementById("playAllUS").addEventListener("click", () => playAll("us"));
     document.getElementById("playAllUK").addEventListener("click", () => playAll("uk"));
@@ -205,8 +127,6 @@
       window.speechSynthesis.cancel();
       statusEl.textContent = "已停止播放";
     });
-
-    render();
   </script>
 </body>
 </html>
