Fix template literals: replace  and  with actual values

--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@ function renderToday(forceNew=false){
   const now = new Date();
   const timeStr = now.toLocaleTimeString('zh-CN', { hour12: false });
   
-  let html = `<div class="muted">今日日期：${today}（10个）• 🤖 词根词缀记忆法 • 更新时间: ${timeStr}</div>`;
+  let html = `<div class="muted">今日日期：2026-02-18（10个）• 🤖 词根词缀记忆法 • 更新时间: 09:06:29</div>`;
   
   words.forEach((w, i) => {
     const etymology = w.etymology;
