fix: add built-in fallback word list when JS/cache fails

--- a/index.html
+++ b/index.html
@@ -54,7 +54,23 @@
     <span class="loading" id="loading">加载中...</span>
   </div>
   
-  <div id="today"></div>
+  <div id="today">
+  <div class="card">
+    <div class="muted">若脚本未加载，先显示基础单词列表（可刷新恢复完整样式）。</div>
+    <ol style="line-height:1.9;margin-top:8px">
+      <li>election — 选举</li>
+      <li>summit — 峰会</li>
+      <li>parliament — 议会</li>
+      <li>innovation — 创新</li>
+      <li>inequality — 不平等</li>
+      <li>inflation — 通货膨胀</li>
+      <li>climate — 气候</li>
+      <li>reform — 改革</li>
+      <li>diplomacy — 外交</li>
+      <li>GDP — 国内生产总值</li>
+    </ol>
+  </div>
+</div>
 
   <div class="history">
     <h2>📚 历史记录（复习）</h2>
